# CCTV-Analytics

./: .gitignore  .python-version  Dockerfile  README.md  container-compose-default.yml  pyproject.toml  requirements.txt
.github/workflows/: build.yml
cctv_analytics/: common.py  main.py
cctv_analytics/analytics_modules/: analyze_audio.py  analyze_images.py  bbox_check_places.py
cctv_analytics/analytics_modules/audio/: audio_milvus_setup.py
cctv_analytics/analytics_modules/car_plates/: car_plates_analytics.py
cctv_analytics/analytics_modules/persons/: persons_analytics.py  persons_milvus_setup.py  persons_roi.py
cctv_analytics/api/: call_http.py  call_slack.py  functions.py  llm_agent.py
cctv_analytics/apis/: deepface_setup.py  florence_setup.py  influxdb_setup.py  minio_setup.py  slack_setup.py  whispar_setup.py  xtts_setup.py
cctv_analytics/locale/: cctv_analytics.pot
cctv_analytics/locale/pl/LC_MESSAGES/: cctv_analytics.mo  cctv_analytics.po
cctv_analytics/tools/: draw_regions.py  find_faces.py  grab_images_from_cctv.py  show_regions.py
cctv_analytics/utils/: config.py  example_config.json
