[tool.poetry]
name = "cctv_analytics"
version = "0.1.0"
description = "CCTV "
authors = ["Daniel Goliszewski <daniel.goliszewski@motlify.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.13"
pillow = "^10.4.0"
influxdb-client = "^1.44.0"
kafka-python = "^2.0.2"
requests = "^2.32.3"
minio = "^7.2.7"
pymilvus = "^2.4.5"
shapely = "^2.0.5"
ollama = "^0.3.1"
pydub = "^0.25.1"
numpy = "^2.0.1"
slack-sdk = "^3.31.0"
slack-bolt = "^1.20.0"
flask = "^3.0.3"
pydantic = "^2.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
download_images = "cctv_analytics.tools.grab_images_from_cctv:run"
draw_regions = "cctv_analytics.tools.draw_regions:run"
show_regions = "cctv_analytics.tools.show_regions:run"
find_similar_faces = "cctv_analytics.tools.find_faces:run"